src/test/deca/codegen/valid/homemade/methodCall.res
ok
not ok
ok
ok
ok
1 ; 2 ; 3.00000e+00
3.00000e+00 ; 2 ; 1
