src/test/deca/codegen/invalid/homemade/nullDereferencementInFieldSelection.res
0.00000e+00 ; 0 ; 0 ; ERROR : null dereferencement
